@@ -1,3 +1,8 @@
+2009-02-18  Mike Krüger  <mkrueger@novell.com>
+
+	* CAutotoolsSetup.cs: Fixed 'Bug 456971 - ${ProjectDir} Not
+	  updating for currently building project'.
+
 2009-02-08  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* CBinding.Autotools.csproj: More refs to keep csc happy.
